TEST_PROGRAMS/INVALID/jonathan_campbell/5.min
var x: int;
var y: int;

x = y;

if x then
	y = x;
else
